casi esta listo

--- a/index.html
+++ b/index.html
@@ -72,19 +72,50 @@
 
     <!-- seccion precios -->
     <section class="fondoprecios">
+
         <div class="grid-container">
-            <h1>precios</h1>
+            
+            <h1 class="titulob">Precios</h1>
 
-            <div class="item1">1</div>
+            <div class="item1">
+                <h2>Trekk-in Free</h2>
+                <h1>$ 0 / mes</h1>
+                <hr>
+                <div class="paddingli">
+                    <li>Ver mapas creados por usuarios</li>
+                    <li>Cobectar con otros usuarios</li>
+                </div>
+                <hr>
+                <input type="button" value="Optén Free">                
+            </div>
 
-            <div class="item2">2</div> 
+            <div class="item2">
+                <h2>Trekk-in Free</h2>
+                <h1>$ 3500 / mes</h1>
+                <hr>
+                <div class="paddingli2">
+                    <li>Ver mapas creados por usuarios</li>
+                    <li>Cobectar con otros usuarios</li>
+                    <li>Definir mejores rutas</li>
+                    <li>Mapas Offiline</li>
+                    <li>Integración con otras aplicaciones</li>
+                </div>
+                <hr>
+                <input type="button" value="Optén Premium">
+            </div> 
+
           </div>
 
     </section>
 
     <!-- footer -->
-    <footer>
-        asd
+    <footer class="Barra__Footer">
+        <ul class="Barra__Footer__lista">
+            <li class="Barra__Footer__item ">Legal</li>
+            <li class="Barra__Footer__item ">Cookies</li>
+            <li class="Barra__Footer__item ">Sobre Anuncios</li>
+            <li class="Barra__Footer__item ml">&copy; 2018 Trekk-in SPA.</li>
+        </ul>
     </footer>
 
 </body>
