--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
                     <svg width="318px" height="165px" xmlns="http://www.w3.org/2000/svg">
                         <g class="bar-graph" fill-rule="evenodd">
 
-                            <path class="a-bar"  d="M10.949 53h34.778v108H10.949z"/>
-                            <path class="b-bar"  d="M63.613 0h34.778v161H63.613z"/>
-                            <path class="c-bar"  d="M116.276 32h34.778v129h-34.778z"/>
-
-                            <path class="d-bar"  d="M168.94 53h34.778v108H168.94z"/>
-                            <path class="e-bar"  d="M221.603 28h34.778v133h-34.778z"/>
-                            <path class="f-bar"  d="M274.267 73h34.778v88h-34.778z"/>
+                            <rect x="10.9" y="53" class="st0 barra1" width="34.8" height="108"/>
+                            <rect x="60.6" y="2" class="st0 barra2" width="34.8" height="161"/>
+                            <rect x="110.2" y="34" class="st0 barra3" width="34.8" height="129"/>
+                            <rect x="168.9" y="53" class="st1 barra4" width="34.8" height="108"/>
+                            <rect x="221.6" y="28" class="st1 barra5" width="34.8" height="133"/>
+                            <rect x="274.3" y="73" class="st1 barra6" width="34.8" height="88"/>
 
                             <path class="plane"  d="M3 162.5h312.503" stroke="#979797" stroke-width="5" stroke-linecap="square"/>
                         </g>
@@ -116,13 +115,15 @@
     </section>
 
     <!-- footer -->
-    <footer class="Barra__Footer">
-        <ul class="Barra__Footer__lista">
-            <li class="Barra__Footer__item ">Legal</li>
-            <li class="Barra__Footer__item ">Cookies</li>
-            <li class="Barra__Footer__item ">Sobre Anuncios</li>
-            <li class="Barra__Footer__item ml">&copy; 2018 Trekk-in SPA.</li>
-        </ul>
+    <footer>
+        <div class="legal">
+            <p>Legal</p>
+            <p>Cookies</p>
+            <p>Sobre anuncios</p>
+        </div>
+        <div class="registrada">
+            <p>© 2018 Trekk-in SPA.</p>
+        </div>           
     </footer>
 
 </body>
