--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                     <svg width="318px" height="165px" xmlns="http://www.w3.org/2000/svg">
                         <g class="bar-graph" fill-rule="evenodd">
 
-                            <rect x="10.9" y="53" class="st0 barra1" width="34.8" height="108"/>
-                            <rect x="60.6" y="2" class="st0 barra2" width="34.8" height="161"/>
-                            <rect x="110.2" y="34" class="st0 barra3" width="34.8" height="129"/>
-                            <rect x="168.9" y="53" class="st1 barra4" width="34.8" height="108"/>
-                            <rect x="221.6" y="28" class="st1 barra5" width="34.8" height="133"/>
-                            <rect x="274.3" y="73" class="st1 barra6" width="34.8" height="88"/>
+                            <rect x="10.9" y="53" class="st0 barra1" width="34.8" height="108" rx="5" ry="5"/>
+                            <rect x="60.6" y="2" class="st0 barra2" width="34.8" height="161" rx="5" ry="5"/>
+                            <rect x="110.2" y="34" class="st0 barra3" width="34.8" height="129" rx="5" ry="5"/>
+                            <rect x="168.9" y="53" class="st1 barra4" width="34.8" height="108" rx="5" ry="5"/>
+                            <rect x="221.6" y="28" class="st1 barra5" width="34.8" height="133" rx="5" ry="5"/>
+                            <rect x="274.3" y="73" class="st1 barra6" width="34.8" height="88" rx="5" ry="5"/>
 
                             <path class="plane"  d="M3 162.5h312.503" stroke="#979797" stroke-width="5" stroke-linecap="square"/>
                         </g>
